--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
     </div>
     <div class="functions">
         <i class="fas fa-search icons"></i>
-        <i class="far fa-bell icons"></i>
+      <i class="far fa-bell icons bell"> <div class="notifications"></div></i>
         <i class="fas fa-bars icons"></i>
+        <i class=""></i>
 
 
     </div>
+   
 </header>
-
+<p class="task-number">0 Task Todo</p>
 <div class="todo-list">
    
        
@@ -35,9 +37,9 @@
 <div class="task-entry">
     <i class="fas fa-angle-left left"></i>Add Task </br></br>
     <label for="title">Title</label></br>
-    <input type="text" class="titleinput entry" placeholder="Enter Todo task"></br>
-    <label for="deadline">Deadline</label></br>
-    <input type="date" class="deadlineinput entry" placeholder="Enter Todo deadline"></br>
+    <input type="text" class="titleinput titleinput2 entry" placeholder="Enter Todo task"></br>
+    <!-- <label for="deadline">Deadline</label></br>
+    <input type="date" class="deadlineinput entry" placeholder="Enter Todo deadline"></br> -->
 
 <div class="time">
 
@@ -51,6 +53,7 @@
 </div>
 <div class="btn-container"><button class="taskbtn addtask">Add task +</button></div>
 <div class="btn-container"><button class="taskbtn createtask">Create task </button></div>
+<div class="btn-container"><button class="taskbtn edittask">Edit task </button></div>
 
 </div>
 
